@@ -160,7 +160,7 @@ class ChEMBLTargetCofactorProvider(StashableBase):
                     actL = []
                     for taD in taDL:
                         if taD["assay_type"] in ["B", "F"]:
-                            if taD["standard_units"] == "nM":
+                            if taD["standard_units"] == "nM" and taD["standard_value"] and taD["standard_value"] > 0.0:
                                 try:
                                     pV = -math.log10(float(taD["standard_value"]) * 10.0e-9)
                                     actD = {
@@ -179,7 +179,7 @@ class ChEMBLTargetCofactorProvider(StashableBase):
                                     actD = self.__addLocalIds(actD, crmpObj=crmpObj)
                                     actL.append(actD)
                                 except Exception as e:
-                                    logger.exception("Failing for tAD %r with %s", taD, str(e))
+                                    logger.debug("Failing for tAD %r with %s", taD, str(e))
 
                     # ---
                     actL = self.__activityListSelect(actL, chemCompNeighborsD, maxActivity=maxActivity)
